grammar.txt
stmt_list       : stmt_list stmt | stmt



stmt            : LABEL SCOPE stmt | expr SQUARE_OPEN reason SQUARE_CLOSE | EOL | COMMENT

________________________________

expr            : NOT expr | expr OR expr | expr AND expr | expr THEN expr | expr IFF expr 
                | VAR | ROUND_OPEN expr ROUND_CLOSE

________________________________

reason          : reason_list EOL
                | reason_list COMMENT

reason_list     : ASSN | HYPO | BY RULE COMMA USING CURLY_OPEN expr_list CURLY_CLOSE
                | BY RULE COMMA USING CURLY_OPEN expr_list CURLY_CLOSE COMMA CANCEL NUM

expr_list       : expr_list COMMA NUM | NUM

________________________________________________________________________________________________

1. Labels
2. Store proved results (subroutine)
3. Syntax highlighting for VSC plug-in
